Grease Pencil doesn't tile textured fills anymore #79538

Closed
opened 2020-08-05 01:20:59 +02:00 by Lucas · 8 comments

System Information
Operating system: Windows-10-10.0.18362-SP0 64 Bits
Graphics card: GeForce GTX 770/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 445.75

Blender Version
Broken: version: 2.91.0 Alpha, branch: master, commit date: 2020-08-04 15:14, hash: 93d8373edb
Worked: blender-2.90.0-baf124c753d9-windows64
Caused by e749643793

Short description of error
Grease Pencil doesn't tile textured fills anymore, also clip image
option doesn't do anything.
Screenshot (2).png
GP-NO_TILING_TEXTURE.blend

**System Information** Operating system: Windows-10-10.0.18362-SP0 64 Bits Graphics card: GeForce GTX 770/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 445.75 **Blender Version** Broken: version: 2.91.0 Alpha, branch: master, commit date: 2020-08-04 15:14, hash: `93d8373edb` Worked: blender-2.90.0-baf124c753d9-windows64 Caused by e749643793 **Short description of error** Grease Pencil doesn't tile textured fills anymore, also clip image option doesn't do anything. ![Screenshot (2).png](https://archive.blender.org/developer/F8746280/Screenshot__2_.png) [GP-NO_TILING_TEXTURE.blend](https://archive.blender.org/developer/F8746281/GP-NO_TILING_TEXTURE.blend)
Author

Added subscriber: @Xorrito

Added subscriber: @Xorrito

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

Added subscribers: @fclem, @antoniov

Added subscribers: @fclem, @antoniov

@fclem I have not changed anything in the GPencil engine. Do you think this bug is related to the refactor of the draw manager?

@fclem I have not changed anything in the GPencil engine. Do you think this bug is related to the refactor of the draw manager?
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Caused by e749643793

Caused by e749643793
Clément Foucault self-assigned this 2020-09-03 16:18:06 +02:00

This issue was referenced by f27d5e4f76

This issue was referenced by f27d5e4f76f7d660235eef6b2c15bd66f33628c2

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Thomas Dinges added this to the 2.91 milestone 2023-02-08 16:21:41 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#79538
No description provided.