Fix T79538 Grease Pencil: Fill texture doesn't tile anymore

This was caused by rBe749643793809248dfc6ffd078be04aec3eeab82 which
removed the texture repeat from Image texture.